--- a/trunk/tinyMediaManager/locale/messages_nl.properties
+++ b/trunk/tinyMediaManager/locale/messages_nl.properties
@@ -402,6 +402,7 @@ Settings.movie.renamer.$M=Filmset titel (sorteer titel)
 Settings.movie.renamer.$N=Filmset titel
 Settings.movie.renamer.$I=IMDB nummer
 Settings.movie.renamer.$C=Certificatie
+Settings.movie.renamer.$D=Regisseur
 Settings.movie.renamer.$G=Eerste genre
 Settings.movie.renamer.$L=Taal
 Settings.movie.renamer.$R=Video resolutie
@@ -419,7 +420,10 @@ Settings.tvshow.renamer.$T=Aflevering titel
 Settings.tvshow.renamer.$F=Video formaat
 Settings.tvshow.renamer.$1=Seizoen nummer
 Settings.tvshow.renamer.$2=Seizoen nummer met minstens 2 cijfers
+Settings.tvshow.renamer.$3=DVD-Seizoen nummer
+Settings.tvshow.renamer.$4=DVD-Seizoen nummer met minstens 2 cijfers
 Settings.tvshow.renamer.$E=Aflevering nummer
+Settings.tvshow.renamer.$D=DVD-Aflevering nummer
 Settings.tvshow.renamer.$R=Video resolutie
 Settings.tvshow.renamer.$A=audio code + kanalen
 Settings.tvshow.renamer.$V=video code + formaat
