--- a/trunk/tinyMediaManager/locale/messages_pt.properties
+++ b/trunk/tinyMediaManager/locale/messages_pt.properties
@@ -49,7 +49,7 @@ tmm.contact=Contato
 tmm.donate=Doar
 tmm.searchfield=Buscar...
 tmm.errorlogs=Mostrar log de erros
-# tmm.messages=Show message history
+tmm.messages=Mostrar histórico de mensagens
 tmm.wakeonlandevice=Dispositivo Wake on LAN
 tmm.wakeonlan=Wake on LAN
 tmm.version=Versão
@@ -77,7 +77,7 @@ tmm.forum=Encontrar ajuda no Forum do tinyMediaManager
 tmm.queued=na fila
 tmm.unknowntitle=Título desconhecido
 tmm.problemdetected=Problema detectado
-# tmm.nostart=Could not start tinyMediaManager
+tmm.nostart=Não foi possível iniciar o tinyMediaManager
 # tmm.nostart.instancerunning=Another instance is already running
 tmm.uicrash=Ops\! Algo desconhecido aconteceu.\nPor favor reinicie o TMM e tente novamente\nSe acontecer novamente, por favor envie uma notificação de erro
 
@@ -305,8 +305,8 @@ Settings.trakt.clearmovies.hint=ATENÇÃO\: Isto irá remover todos os seus film
 Settings.trakt.cleartvshows=Remover Programas de TV do Trakt.tv?
 Settings.trakt.cleartvshows.hint=ATENÇÃO\: Isto irá remover todos os seus Programas de TV e status de assistidos do seu perfil Trakt.tv. Prosseguir?
 # Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
+Settings.memoryborder=Configurações da memória
+Settings.memory=Memória Máx.
 # Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
@@ -314,7 +314,7 @@ Settings.poster=Pôster e Fanart
 Settings.images=Imagens
 Settings.source=Origem
 Settings.fanarttv.alert=Atenção\: Fanart.tv não fornece pôster
-Settings.moviefilename=<nomearquivo filme>
+Settings.moviefilename=<movie filename>
 Settings.tbn.deprecation=.tbn está desatualizado e será removido em breve
 Settings.naming.info=NOTA\: As opções acima vão criar um arquivo com extensão .JPG ou .PNG dependendo do formato/tipo da Arte
 Settings.extraartwork=Habilitar arte extra
@@ -357,7 +357,7 @@ Settings.multipleMovies=Permitir múltiplos filmes por diretório
 Settings.multipleMovies.hint=ATENÇÃO\: esta opção permitirá importar múltiplos filmes por diretório.\nHabilitar pode causar efeitos colaterais\: você não será mais capaz de\nescolher nenhum tipo de nomenclatura específica para extrafanart/extrathumbs.\nUSAR MÚLTIPLOS FILMES POR DIRETÓRIO NÃO É RECOMENDADO\!
 Settings.nfoFormat=formato NFO
 Settings.nofFileNaming=Nome NFO
-# Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Tipos de vídeo
 Settings.extrafiletypes=Legendas e arquivos adicionais
 Settings.audiofiletypes=Arquivos de áudio
@@ -392,49 +392,53 @@ Settings.movie.renamer.example=Escolha um arquivo e padrão p/ renomear\nSe o ca
 Settings.movie.renamer.nomovie=pelo menos um filme é necessário como exemplo
 Settings.movie.renamer.spacesubstitution=Substituir espaços por
 
-# Settings.movie.renamer.$T=Title
-# Settings.movie.renamer.$O=Original title
-# Settings.movie.renamer.$1=first letter of the title
+Settings.movie.renamer.$T=Título
+Settings.movie.renamer.$O=Título original
+Settings.movie.renamer.$1=primeira letra do título
 # Settings.movie.renamer.$E=Sort title
 # Settings.movie.renamer.$2=first letter of sort title
-# Settings.movie.renamer.$Y=Year
+Settings.movie.renamer.$Y=Ano
 # Settings.movie.renamer.$M=Movieset title (sort title)
-# Settings.movie.renamer.$N=Movieset title
-# Settings.movie.renamer.$I=IMDB number
-# Settings.movie.renamer.$C=Certification
-# Settings.movie.renamer.$G=First genre
-# Settings.movie.renamer.$L=Language
-# Settings.movie.renamer.$R=Video resolution
-# Settings.movie.renamer.$A=audio code + channels
-# Settings.movie.renamer.$V=video code + format
-# Settings.movie.renamer.$F=video format
+Settings.movie.renamer.$N=Título da coleção
+Settings.movie.renamer.$I=número IMDB
+Settings.movie.renamer.$C=Certificação
+Settings.movie.renamer.$D=Diretor
+Settings.movie.renamer.$G=Gênero principal
+Settings.movie.renamer.$L=Idioma
+Settings.movie.renamer.$R=Resolução do vídeo
+Settings.movie.renamer.$A=código de áudio + canais
+Settings.movie.renamer.$V=código do vídeo + formato
+Settings.movie.renamer.$F=formato do vídeo
 # Settings.movie.renamer.$S=media source (DVD etc)
 # Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
 
 # Settings.tvshow.renamer.title=Renamer pattern and options
 
-# Settings.tvshow.renamer.$N=TV show name
-# Settings.tvshow.renamer.$Y=Year
-# Settings.tvshow.renamer.$T=Episode title
-# Settings.tvshow.renamer.$F=Video format
-# Settings.tvshow.renamer.$1=Season number
-# Settings.tvshow.renamer.$2=Season number with at least 2 digits
-# Settings.tvshow.renamer.$E=Episode number
-# Settings.tvshow.renamer.$R=Video resolution
-# Settings.tvshow.renamer.$A=audio code + channels
-# Settings.tvshow.renamer.$V=video code + format
-# Settings.tvshow.renamer.$F=Video format
+Settings.tvshow.renamer.$N=Nome do Programa de TV
+Settings.tvshow.renamer.$Y=Ano
+Settings.tvshow.renamer.$T=Título do Episódio
+Settings.tvshow.renamer.$F=Formato do vídeo
+Settings.tvshow.renamer.$1=Número da Temporada
+Settings.tvshow.renamer.$2=Número da temporada com, no mínimo, 2 dígitos
+# Settings.tvshow.renamer.$3=DVD-Season number
+# Settings.tvshow.renamer.$4=DVD-Season number with at least 2 digits
+Settings.tvshow.renamer.$E=Número do Episódio
+# Settings.tvshow.renamer.$D=DVD-Episode number
+Settings.tvshow.renamer.$R=Resolução do vídeo
+Settings.tvshow.renamer.$A=código de áudio + canais
+Settings.tvshow.renamer.$V=código do vídeo + formato
+Settings.tvshow.renamer.$F=Formato do vídeo
 
 
 # tv show settings
-Settings.tvshowdatasource=Fonte de programa de Tv
+Settings.tvshowdatasource=Fontes dos Programas de Tv
 Settings.tvshowdatasource.folderchooser=Adicionar fonte de programa de Tv
 Settings.tvshowdatasource.remove.info=Se você remover %s da sua origem de dados, todos os Programas de TV e Séries neste caminho serão removidos da base de dados do TMM. Continuar?
 # Settings.dvdorder=Imported episodes are in DVD order
 
-# Settings.tvshowfoldername=TV show folder name
-# Settings.tvshowseasonfoldername=Season folder name
-# Settings.tvshowfilename=Episode file name
+Settings.tvshowfoldername=Nome da pasta do Programa de TV
+Settings.tvshowseasonfoldername=Nome da pasta da Temporada
+Settings.tvshowfilename=Nome do arquivo do Episódio
 Settings.tvshowspacereplacement.hint=Substitui espaços no título com este caractere
 Settings.tvshow.certifactioncountry.hint=Dica\: no momento nenhum dos pesquisadores suportam certificações de países diferentes.\nO TV Database  sempre vai retornar certificações US\nO AniDB não fornece certificações.
 
@@ -445,7 +449,7 @@ tvshow.scrape.selected=Pesquisar e buscar Programas de Tv selecionados
 tvshow.scrape.selected.force=Pesquisar e buscar programa(s) de TV selecionados - forçar melhor resultado
 tvshow.scrape.selected.force.desc=Pesquisar e buscar programa de TV selecionados sem interação; forçar melhor resultado
 tvshow.scrape.nomatchfound=Nenhum programa de TV encontrado na busca
-tvshow.edit=Editar programa(s) de TV/episódio(s)
+tvshow.edit=Editar o(s) programa(s) de TV/episódio(s) selecionado(s)
 tvshow.edit.abortqueue.desc=Abortar edição dos Programas de TV selecionados
 tvshow.remove=Remover o(s) programa(s) de TV/episódio(s)
 tvshow.delete=Apagar programa(s) de TV selecionado(s)
@@ -498,7 +502,7 @@ metatag.actors=Atores
 metatag.aired=Aired
 metatag.artwork=Artwork
 metatag.audio=Áudio
-metatag.audiocodec=Codec de Áudi
+metatag.audiocodec=Codec de áudio
 metatag.cast=Elenco
 metatag.certification=Certificação
 metatag.codec=Codec
@@ -524,7 +528,7 @@ metatag.guests=Convidados
 metatag.images=Imagens
 metatag.imdb=IMDB Id
 metatag.internal=interno
-# metatag.language=Language
+metatag.language=Idioma
 metatag.mediafiletype=Tipo
 metatag.minutes=min
 metatag.movie=Filme
@@ -567,7 +571,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Vídeo
 metatag.videocodec=Codec de Vídeo
-# metatag.videobitrate=Video bitrate
+metatag.videobitrate=Taxa de bits de vídeo
 metatag.watched=Assistido
 metatag.writer=Escritor
 metatag.year=Ano
