--- a/trunk/tinyMediaManager/locale/messages_ru.properties
+++ b/trunk/tinyMediaManager/locale/messages_ru.properties
@@ -1,11 +1,11 @@
-# Button.ok=Ok
-# Button.cancel=Cancel
+Button.ok=ОК
+Button.cancel=Отмена
 Button.add=Добавить
 Button.addfile=Добавить файл
 Button.remove=Удалить
 Button.continue=Продолжить
-Button.abort=Отменить
-# Button.abortqueue=Abort queue
+Button.abort=Прервать
+Button.abortqueue=Прервать очередь
 Button.close=Закрыть
 Button.search=Поиск
 # Button.save=Save
@@ -23,14 +23,14 @@ menuitem.paste=Вставить
 # vertical tabs (singular / plural)
 tmm.movies=Фильмы
 # tmm.movie=Movie
-# tmm.moviesets=Movie sets
+tmm.moviesets=Коллекции
 # tmm.movieset=Movie set
 # tmm.tvshows=TV shows
 # tmm.tvshow=TV show
 tmm.settings=Настройки
 
 # menu actions
-# tmm.exit=Quit
+tmm.exit=Выход
 tmm.exit.runningtasks=Вы уверены, что хотите закрыть tinyMediaManager?\nНекоторые задачи до сих пор выполняются.
 # tmm.exit.confirmation=Quit confirmation
 tmm.cache=Кэш
@@ -42,7 +42,7 @@ tmm.cleardatabase=Инициализация базы данных
 tmm.cleardatabase.info=База данных инициализирована. Пожалуйста перезапустите tinyMediaManager
 tmm.cleardatabase.error=При инициализации базы данных произошла ошибка. Пожалуйста удалите файл tmm.odb вручную.
 # tmm.gotoinstalldir=Open tMM install directory in a file browser
-# tmm.debug=Debug
+tmm.debug=Отладка
 # tmm.tools=Tools
 tmm.about=О нас
 # tmm.contact=Contact us
@@ -81,7 +81,7 @@ tmm.subtitles=Субтитры
 # tmm.nostart.instancerunning=Another instance is already running
 # tmm.uicrash=Whoops. Something unforeseen has happened.\nPlease restart TMM and try again.\nIf it happens again, we would kindly ask you to submit a bugreport.
 
-# status.activethreads=There are active threads - click for details
+status.activethreads=Есть открытые потоки - кликните для просмотра
 # task.running=Working..
 # task.queued=Waiting..
 # task.cancelled=Cancelled..
@@ -92,7 +92,7 @@ tmm.subtitles=Субтитры
 # task.remaining=tasks remaining
 
 # menu & popup on rightclick
-# onlyoneoperation=Only one operation at one time is allowed. The task will be queued
+onlyoneoperation=Одновременно может выполняться не более одной операции. Задача будет добавлена в очередь.
 # update.datasource=Update data sources
 # update.datasource.nonespecified=No data sources specified. Please add them in the settings
 # update.datasource.unavailable=Datasource {} not available - skipping
@@ -109,8 +109,8 @@ tmm.subtitles=Субтитры
 
 # movie.scraping=Scraping movies
 movie.scrape.selected=Найти и загрузить информацию по выбранным фильмам.
-# movie.scrape.selected.force=Search & scrape selected movie(s) - force best match
-# movie.scrape.selected.force.desc=Search & scrape selected movie(s) without user interaction; forces best match
+movie.scrape.selected.force=Найти и загрузить информацию по выбранным фильмам - принудительно лучшее совпадение
+movie.scrape.selected.force.desc=Найти и загрузить информацию по выбранным фильмам без участия пользователя. Принудительно лучшее совпадение.
 # movie.scrape.unscraped=Search & scrape all unscraped movie(s) - force best match
 # movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user interaction; forces best match
 # movie.scrape.metadata=Scrape metadata for selected movie(s)
@@ -118,16 +118,16 @@ movie.scrape.selected=Найти и загрузить информацию по
 # movie.scrape.nomatchfound=No suitable movie found during search
 # movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
 # movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
-# movie.remove=Remove selected movie(s) (DB)
+movie.remove=Удалить выбранные фильмы (БД)
 # movie.delete=Delete selected movie(s) (DB + file)
 # movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
 # movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source\nand deleted on exit of tinyMediaManager (if activated in settings)
-# movie.rename=Rename/cleanup selected movie(s)
+movie.rename=Обновить структуру файлов выбранных фильмов
 # movie.renamepreview=Rename/cleanup selected movie(s) - dry run
 # movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
 # movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Обновить информацию для выбранных фильмов.
-# movie.bulkedit=Bulk editing
+movie.bulkedit=Групповое редактирование
 movie.bulkedit.desc=Изменить жанр, теги, коллекцию и статус просмотра для всех выбранных фильмов.
 movie.rewritenfo=Перезаписать NFO-файл для выбранных фильмов
 # movie.clearimagecache=Clear image cache for selected movie(s)
@@ -145,16 +145,16 @@ movie.rewritenfo=Перезаписать NFO-файл для выбранных
 
 movie.export=Экспорт выбранных фильмов
 
-# movie.edit=Edit movie
+movie.edit=Редактировать фильм
 # movie.edit.abortqueue.desc=Abort editing all selected movies
 # movie.edit.moveactorup=Move selected actor up
 # movie.edit.moveactordown=Move selected actor down
 # movie.edit.moveproducerup=Move selected producer up
 # movie.edit.moveproducerdown=Move selected producer down
 
-# movie.inmovieset=Movies in a movieset
-# movie.notinmovieset=Movies not in a movieset
-# movie.change=Change movie
+movie.inmovieset=Фильмы в коллекции
+movie.notinmovieset=Фильмы не в коллекции
+movie.change=Сменить фильм
 
 # movieset.add.desc=Add a movie set
 # movieset.remove.desc=Remove selected movie set(s)
@@ -178,7 +178,7 @@ movie.export=Экспорт выбранных фильмов
 # renamer.newfiles=New file names
 
 cast.actor.add=Добавить актёра
-# cast.actor.remove=Remove selected Actor
+cast.actor.remove=Удалить выбранного актера
 cast.actor.unknown=Неизвестный актёр.
 cast.role.unknown=Неизвестная роль.
 # cast.producer.add=Add a new Producer
@@ -216,11 +216,11 @@ scraper=Загрузить информацию
 # image.download=Downloading image
 # image.download.failed=Could not download image
 # image.download.noid=No ID (imdbId or tmdbId) for searching available
-# image.download.progress=Downloading images
+image.download.progress=Загрузка изображений
 # image.download.nothingfound=No images found
-# image.poster.size=Poster size
+image.poster.size=Размер постера
 # image.poster.naming=Poster file naming
-# image.fanart.size=Fanart size
+image.fanart.size=Размер фанарта
 # image.fanart.naming=Fanart file naming
 # image.thumb.naming=Thumb file naming
 image.notfound.fanart=Фанарт не найден
@@ -267,7 +267,7 @@ BugReport.email=Email
 # Feedback.send.ok=Feedback sent
 
 # settings menu (linebreaks with html)
-# Settings.movies=Movies
+Settings.movies=Фильмы
 # Settings.scraper=Scraper
 # Settings.images=Images
 # Settings.tvshow=TV Shows
@@ -281,8 +281,8 @@ BugReport.email=Email
 # Settings.proxy=Proxy Settings
 # Settings.proxyhost=Host
 # Settings.proxyport=Port
-# Settings.proxyuser=Username
-# Settings.proxypass=Password
+Settings.proxyuser=Пользователь
+Settings.proxypass=Пароль
 # Settings.clearhttpcache=Clear HTTP cache on shutdown
 Settings.cache=Кэш
 # Settings.imagecache=Enable image cache
@@ -324,8 +324,8 @@ Settings.language=Язык интерфейса
 # Settings.amount.autodownload=maximum of downloaded images on automatic scraping
 # Settings.actor=Actor Images
 # Settings.actor.download=download actor images to .actors
-# Settings.movieset=Movieset artwork
-# Settings.movieset.store=Store movieset artwork in a separate folder
+Settings.movieset=Обложка коллекции
+Settings.movieset.store=Сохранять обложки коллекций в отдельную папку
 # Settings.movieset.foldername=Folder name
 # Settings.movieset.buttonselect=Select folder
 # Settings.movieset.folderchooser=select movieset artwork folder
@@ -402,6 +402,7 @@ Settings.macaddress=MAC-адрес
 # Settings.movie.renamer.$N=Movieset title
 # Settings.movie.renamer.$I=IMDB number
 # Settings.movie.renamer.$C=Certification
+# Settings.movie.renamer.$D=Director
 # Settings.movie.renamer.$G=First genre
 # Settings.movie.renamer.$L=Language
 # Settings.movie.renamer.$R=Video resolution
@@ -419,7 +420,10 @@ Settings.macaddress=MAC-адрес
 # Settings.tvshow.renamer.$F=Video format
 # Settings.tvshow.renamer.$1=Season number
 # Settings.tvshow.renamer.$2=Season number with at least 2 digits
+# Settings.tvshow.renamer.$3=DVD-Season number
+# Settings.tvshow.renamer.$4=DVD-Season number with at least 2 digits
 # Settings.tvshow.renamer.$E=Episode number
+# Settings.tvshow.renamer.$D=DVD-Episode number
 # Settings.tvshow.renamer.$R=Video resolution
 # Settings.tvshow.renamer.$A=audio code + channels
 # Settings.tvshow.renamer.$V=video code + format
@@ -524,7 +528,7 @@ metatag.guests=Гости
 # metatag.images=Images
 # metatag.imdb=IMDB Id
 # metatag.internal=internal
-# metatag.language=Language
+metatag.language=Язык
 metatag.mediafiletype=Тип
 # metatag.minutes=min
 metatag.movie=Фильм
