--- a/trunk/tinyMediaManager/locale/messages_sk.properties
+++ b/trunk/tinyMediaManager/locale/messages_sk.properties
@@ -402,6 +402,7 @@ Settings.movie.renamer.$M=Názov kolekcie filmov (názov pre usporiadanie)
 Settings.movie.renamer.$N=Názov kolekcie filmov
 Settings.movie.renamer.$I=IMDB číslo
 Settings.movie.renamer.$C=Certifikácia
+Settings.movie.renamer.$D=Režisér
 Settings.movie.renamer.$G=Prvý žáner
 Settings.movie.renamer.$L=Jazyk
 Settings.movie.renamer.$R=Rozlíšenie videa
@@ -419,7 +420,10 @@ Settings.tvshow.renamer.$T=Názov epizódy
 Settings.tvshow.renamer.$F=Formát videa
 Settings.tvshow.renamer.$1=Číslo sezóny
 Settings.tvshow.renamer.$2=Číslo sezóny s aspoň 2 číslicami
+Settings.tvshow.renamer.$3=DVD-Číslo sezóny
+Settings.tvshow.renamer.$4=DVD-Číslo sezóny s aspoň 2 číslicami
 Settings.tvshow.renamer.$E=Číslo epizódy
+Settings.tvshow.renamer.$D=DVD-Číslo epozódy
 Settings.tvshow.renamer.$R=Rozlíšenie videa
 Settings.tvshow.renamer.$A=Audio kodek + kanály
 Settings.tvshow.renamer.$V=Video kodek + formát
